--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.4",
     "morgan": "~1.7.0",
     "multer": "^1.2.1",
+    "multer-ftp": "^1.2.0",
     "mysql": "^2.5.4",
     "ng-file-upload": "^12.2.13",
     "nodemailer": "^2.7.2",
