--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer-smtp-transport": "^2.7.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "rename-keys": "^1.1.2",
     "req-flash": "0.0.3",
     "sendgrid": "^4.7.1",
     "serve-favicon": "~2.3.0"
