--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rename-keys": "^1.1.2",
     "req-flash": "0.0.3",
     "sendgrid": "^4.7.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "serve-static": "^1.12.1"
   }
 }
