--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "heroku-ssl-redirect": "0.0.4",
     "knex": "^0.12.6",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "morgan": "~1.7.0",
     "multer": "^1.3.0",
     "multer-ftp": "^1.2.0",
