--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "multer": "^1.3.0",
     "multer-ftp": "^1.2.0",
     "mysql": "^2.5.4",
+    "newrelic": "^1.40.0",
     "ng-file-upload": "^12.2.13",
     "nodemailer": "^2.7.2",
     "nodemailer-smtp-transport": "^2.7.2",
