restricted access rights for non-board members to finances page

--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "multer-ftp": "^1.2.0",
     "mysql": "^2.5.4",
     "ng-file-upload": "^12.2.13",
-    "nodemailer": "^2.7.2",
-    "nodemailer-smtp-transport": "^2.7.2",
+    "node-schedule": "^1.2.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "rename-keys": "^1.1.2",
