--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "express-session": "^1.14.2",
+    "ftp": "^0.3.10",
     "heroku-ssl-redirect": "0.0.4",
     "knex": "^0.12.6",
     "lodash": "^4.17.4",
