--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "angular-bootstrap-datetimepicker": "^1.1.3",
     "async": "^2.1.4",
     "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.5.0",
     "body-parser": "~1.15.2",
     "bookshelf": "^0.10.2",
     "console-stamp": "^0.2.4",
@@ -37,6 +38,8 @@
     "passport-local": "^1.0.0",
     "rename-keys": "^1.1.2",
     "req-flash": "0.0.3",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1",
     "sendgrid": "^4.7.1",
     "serve-favicon": "~2.3.0",
     "serve-static": "^1.12.1"
