--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "angular-bootstrap-datetimepicker": "^1.1.3",
+    "array-flatten": "^2.1.1",
     "async": "^2.1.4",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.0",
