--- a/package.json
+++ b/package.json
@@ -15,36 +15,37 @@
     "async": "^2.1.4",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.0",
-    "body-parser": "~1.15.2",
+    "body-parser": "~1.18.2",
     "bookshelf": "^0.10.2",
     "console-stamp": "^0.2.4",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
+    "debug": "~3.1.0",
     "dotenv": "^4.0.0",
     "ejs": "~2.5.2",
-    "express": "~4.14.0",
+    "express": "~4.16.1",
     "express-session": "^1.14.2",
     "ftp": "^0.3.10",
     "heroku-ssl-redirect": "0.0.4",
     "inherits": "^2.0.3",
-    "knex": "^0.12.6",
+    "knex": "^0.13.0",
     "lodash": "^4.17.4",
+    "longjohn": "^0.2.12",
     "moment": "^2.18.1",
-    "morgan": "~1.7.0",
+    "morgan": "~1.9.0",
     "multer": "^1.3.0",
     "multer-ftp": "^1.2.0",
     "mysql": "^2.5.4",
     "ng-file-upload": "^12.2.13",
     "node-schedule": "^1.2.3",
-    "passport": "^0.3.2",
+    "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "qs": "^6.5.0",
     "rename-keys": "^1.1.2",
     "req-flash": "0.0.3",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
-    "sendgrid": "^4.7.1",
-    "serve-favicon": "~2.3.0",
+    "sendgrid": "^5.2.3",
+    "serve-favicon": "~2.4.5",
     "serve-static": "^1.12.1"
   }
 }
