--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Alexander Hans",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "deploy": "git push heroku master"
   },
   "dependencies": {
     "angular-bootstrap-datetimepicker": "^1.1.3",
