--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bookshelf": "^0.10.2",
     "console-stamp": "^0.2.4",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~3.1.0",
     "dotenv": "^4.0.0",
     "ejs": "~2.5.2",
