--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "dotenv": "^4.0.0",
     "ejs": "~2.5.2",
     "express": "~4.16.1",
-    "express-session": "^1.14.2",
+    "express-mysql-session": "^2.0.0",
+    "express-session": "^1.15.6",
     "heroku-ssl-redirect": "0.0.4",
     "inherits": "^2.0.3",
-    "knex": "^0.13.0",
-    "lodash": "^4.17.4",
+    "knex": "^0.15.2",
+    "lodash": "^4.17.10",
     "longjohn": "^0.2.12",
-    "moment": "^2.18.1",
+    "moment": "^2.22.2",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
     "multer-sftp": "^0.2.0",
@@ -42,11 +43,11 @@
     "qs": "^6.5.0",
     "rename-keys": "^1.1.2",
     "req-flash": "0.0.3",
-    "request": "^2.81.0",
-    "request-promise": "^4.2.1",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2",
     "sendgrid": "^5.2.3",
     "serve-favicon": "~2.4.5",
-    "serve-static": "^1.12.1",
+    "serve-static": "^1.13.2",
     "ssh2": "^0.5.5"
   },
   "devDependencies": {
