--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
     "no-console": 0,
     "no-use-before-define": 0,
     "no-await-in-loop": 0,
+    "global-require": 0,
     "camelcase": 0
   }
 }
