--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "no-use-before-define": 0,
     "no-await-in-loop": 0,
     "object-curly-newline": 0,
+    "consistent-return": 0,
     "global-require": 0,
     "camelcase": 0
   }
