--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "no-await-in-loop": 0,
     "object-curly-newline": 0,
     "consistent-return": 0,
+    "no-underscore-dangle": 0,
     "global-require": 0,
     "camelcase": 0
   }
