--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Alexander Hans",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node app.js",
     "deploy": "git push heroku master"
   },
   "dependencies": {
