--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "max-len": [1, 120, 2, {"ignoreComments": true}],
     "no-param-reassign": 0,
     "no-console": 0,
+    "no-undef": 0,
     "no-use-before-define": 0,
     "react/prefer-stateless-function": 0,
     "react/jsx-one-expression-per-line": 0,
@@ -13,6 +14,8 @@
     "react/jsx-first-prop-new-line": 0,
     "react/jsx-closing-bracket-location": 0,
     "react/jsx-indent-props": 0,
+    "react/prop-types": 0,
+    "react/destructuring-assignment": 0,
     "jsx-a11y/label-has-for": 0,
     "react/jsx-filename-extension": 0
   }
