--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@material-ui/core": "^1.4.1",
     "cross-env": "^5.2.0",
     "flux": "^3.1.3",
+    "moment": "^2.22.2",
     "react": "^16.4.1",
+    "react-currency-formatter": "^1.1.0",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
