--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "no-underscore-dangle": 0,
     "object-curly-newline": 0,
     "jsx-a11y/click-events-have-key-events": 0,
+    "react/no-array-index-key": 0,
     "react/prefer-stateless-function": 0,
     "react/jsx-one-expression-per-line": 0,
     "react/jsx-max-props-per-line": 0,
