--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "react": "^16.4.1",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "^16.4.1",
+    "react-responsive-table": "^2.0.15",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
-    "start": "cross-env HOST=local.members.debating.de react-scripts start",
+    "start": "cross-env HOST=local.members.debating.de PORT=3006 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
