--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^1.4.1",
     "cross-env": "^5.2.0",
     "flux": "^3.1.3",
     "moment": "^2.22.2",
     "react": "^16.4.1",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "^16.4.1",
+    "react-notifications": "^1.4.3",
     "react-responsive-table": "^2.0.15",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
