--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "no-use-before-define": 0,
     "no-underscore-dangle": 0,
     "object-curly-newline": 0,
+    "jsx-a11y/no-noninteractive-element-interactions": 0,
     "jsx-a11y/click-events-have-key-events": 0,
     "jsx-a11y/interactive-supports-focus": 0,
     "react/no-array-index-key": 0,
