--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "flux": "^3.1.3",
     "moment": "^2.22.2",
     "react": "^16.4.1",
+    "react-avatar-edit": "^0.6.0",
+    "react-confirm-alert": "^2.0.5",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "^16.4.1",
     "react-notifications": "^1.4.3",
+    "react-redux": "^5.0.7",
     "react-responsive-table": "^2.0.15",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "cross-env HOST=local.members.debating.de PORT=3006 react-scripts start",
