--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "no-param-reassign": 0,
     "no-console": 0,
     "no-undef": 0,
+    "no-case-declarations": 0,
     "no-use-before-define": 0,
     "no-underscore-dangle": 0,
     "object-curly-newline": 0,
