--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "no-undef": 0,
     "no-case-declarations": 0,
     "no-use-before-define": 0,
+    "no-nested-ternary": 0,
     "no-underscore-dangle": 0,
     "object-curly-newline": 0,
     "jsx-a11y/no-noninteractive-element-interactions": 0,
