--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "moment": "^2.22.2",
     "react": "^16.4.1",
     "react-avatar-edit": "^0.6.0",
+    "react-bootstrap-table-next": "^1.3.0",
     "react-confirm-alert": "^2.0.5",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "^16.4.1",
