--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,12 @@
 // Use this file as a starting point for your project's .eslintrc.
 // Copy this file, and add rule overrides as needed.
 {
-  "extends": "airbnb",
+  "extends": ["airbnb", "prettier"],
+  "plugins": [
+    "prettier"
+  ],
   "rules": {
+    "prettier/prettier": "error",
     "max-len": [1, 120, 2, {"ignoreComments": true}],
     "no-param-reassign": 0,
     "no-console": 0,
