--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "express": "~4.16.1",
     "express-mysql-session": "^2.0.0",
     "express-session": "^1.15.6",
+    "fix": "0.0.6",
     "heroku-ssl-redirect": "0.0.4",
     "inherits": "^2.0.3",
     "knex": "^0.15.2",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
-    "morgan": "~1.9.0",
+    "morgan": "^1.9.1",
     "multer": "^1.3.0",
     "multer-sftp": "^0.2.0",
     "mysql": "^2.5.4",
@@ -50,6 +51,7 @@
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.0.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1"
