--- a/package.json
+++ b/package.json
@@ -1,38 +1,46 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "cross-env": "^5.2.0",
-    "flux": "^3.1.3",
-    "moment": "^2.22.2",
-    "react": "^16.4.1",
-    "react-avatar-edit": "^0.6.0",
-    "react-bootstrap-table-next": "^1.3.0",
-    "react-confirm-alert": "^2.0.5",
-    "react-currency-formatter": "^1.1.0",
-    "react-dom": "^16.4.1",
-    "react-notifications": "^1.4.3",
-    "react-redux": "^5.0.7",
-    "react-responsive-table": "^2.0.15",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
-  },
-  "scripts": {
-    "start": "cross-env HOST=local.members.debating.de PORT=3006 react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.9.1"
-  }
+	"name": "bdudb-frontend",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"bootstrap": "^4.3.1",
+		"jquery": "^3.4.0",
+		"moment": "^2.24.0",
+		"popper.js": "^1.15.0",
+		"react": "^16.8.6",
+		"react-bootstrap-table-next": "^3.1.1",
+		"react-confirm-alert": "^2.4.1",
+		"react-currency-formatter": "^1.1.0",
+		"react-dom": "^16.8.6",
+		"react-notifications": "^1.4.3",
+		"react-redux": "^7.0.2",
+		"react-router-dom": "^5.0.0",
+		"react-scripts": "2.1.8",
+		"redux": "^4.0.1",
+		"redux-thunk": "^2.3.0"
+	},
+	"scripts": {
+		"start": "cross-env HOST=local.members.debating.de PORT=3006 react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	],
+	"devDependencies": {
+		"cross-env": "^5.2.0",
+		"eslint-config-airbnb": "^17.1.0",
+		"eslint-config-prettier": "^4.1.0",
+		"eslint-plugin-import": "^2.17.2",
+		"eslint-plugin-jsx-a11y": "^6.2.1",
+		"eslint-plugin-react": "^7.12.4",
+		"node-sass": "^4.11.0"
+	}
 }
