--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
     "react/jsx-max-props-per-line": 0,
     "react/jsx-first-prop-new-line": 0,
     "react/jsx-closing-bracket-location": 0,
+    "react/jsx-indent": 0,
     "react/jsx-indent-props": 0,
     "react/prop-types": 0,
     "react/destructuring-assignment": 0,
