--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
 		"jquery": "^3.4.0",
 		"moment": "^2.24.0",
 		"popper.js": "^1.15.0",
+		"prop-types": "^15.7.2",
 		"react": "^16.8.6",
 		"react-bootstrap-table-next": "^3.1.1",
+		"react-bootstrap-table2-editor": "^1.2.3",
 		"react-confirm-alert": "^2.4.1",
 		"react-currency-formatter": "^1.1.0",
 		"react-dom": "^16.8.6",
