--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "no-nested-ternary": 0,
     "no-underscore-dangle": 0,
     "object-curly-newline": 0,
+    "jsx-a11y/label-has-associated-control": 0,
     "jsx-a11y/no-noninteractive-element-interactions": 0,
     "jsx-a11y/click-events-have-key-events": 0,
     "jsx-a11y/interactive-supports-focus": 0,
