made improvements to API

--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "deploy": "git push heroku master"
   },
   "dependencies": {
-    "angular-bootstrap-datetimepicker": "^1.1.3",
     "array-flatten": "^2.1.1",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.0",
@@ -22,7 +21,6 @@
     "cors": "^2.8.4",
     "debug": "~3.1.0",
     "dotenv": "^4.0.0",
-    "ejs": "~2.5.2",
     "express": "~4.16.1",
     "express-mysql-session": "^2.0.0",
     "express-session": "^1.15.6",
@@ -36,7 +34,6 @@
     "multer": "^1.3.0",
     "multer-sftp": "^0.2.0",
     "mysql": "^2.5.4",
-    "ng-file-upload": "^12.2.13",
     "node-schedule": "^1.2.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -54,6 +51,7 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.9.1"
+    "eslint-plugin-react": "^7.9.1",
+    "prettier": "^1.17.0"
   }
 }
