--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-redux": "^7.0.2",
 		"react-router-dom": "^5.0.0",
 		"react-scripts": "2.1.8",
+		"recharts": "^1.5.0",
 		"redux": "^4.0.1",
 		"redux-thunk": "^2.3.0"
 	},
