--- a/package.json
+++ b/package.json
@@ -1,50 +1,52 @@
 {
-	"name": "bdudb-frontend",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"bootstrap": "^4.3.1",
-		"jquery": "^3.4.0",
-		"moment": "^2.24.0",
-		"popper.js": "^1.15.0",
-		"prop-types": "^15.7.2",
-		"react": "^16.8.6",
-		"react-bootstrap-table-next": "^3.1.1",
-		"react-bootstrap-table2-editor": "^1.2.3",
-		"react-confirm-alert": "^2.4.1",
-		"react-currency-formatter": "^1.1.0",
-		"react-dom": "^16.8.6",
-		"react-notifications": "^1.4.3",
-		"react-redux": "^7.0.2",
-		"react-router-dom": "^5.0.0",
-		"react-scripts": "2.1.8",
-		"recharts": "^1.5.0",
-		"redux": "^4.0.1",
-		"redux-thunk": "^2.3.0"
-	},
-	"scripts": {
-		"start": "cross-env HOST=local.members.debating.de PORT=3006 react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
-	},
-	"browserslist": [
-		">0.2%",
-		"not dead",
-		"not ie <= 11",
-		"not op_mini all"
-	],
-	"devDependencies": {
-		"cross-env": "^5.2.0",
-		"eslint-config-airbnb": "^17.1.0",
-		"eslint-config-prettier": "^4.1.0",
-		"eslint-plugin-import": "^2.17.2",
-		"eslint-plugin-jsx-a11y": "^6.2.1",
-		"eslint-plugin-react": "^7.12.4",
-		"node-sass": "^4.12.0",
-		"prettier": "^1.17.0"
-	}
+  "name": "bdudb-frontend",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "final-form": "^4.18.2",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "popper.js": "^1.15.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-bootstrap-table-next": "^3.1.5",
+    "react-bootstrap-table2-editor": "^1.2.4",
+    "react-confirm-alert": "^2.4.1",
+    "react-currency-formatter": "^1.1.0",
+    "react-dom": "^16.8.6",
+    "react-final-form": "^6.3.0",
+    "react-notifications": "^1.4.3",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "recharts": "^1.6.2",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
+  },
+  "scripts": {
+    "start": "cross-env HOST=local.members.debating.de PORT=3006 react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "devDependencies": {
+    "cross-env": "^5.2.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "node-sass": "^4.12.0",
+    "prettier": "^1.17.0"
+  }
 }
