--- a/.eslintrc
+++ b/.eslintrc
@@ -1,33 +1,29 @@
 // Use this file as a starting point for your project's .eslintrc.
 // Copy this file, and add rule overrides as needed.
 {
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "sourceType": "module",
+    "allowImportExportEverywhere": false,
+    "codeFrame": false
+  },
   "extends": ["airbnb", "prettier"],
+  "env": {
+    "browser": true,
+    "jest": true
+  },
   "rules": {
-    "camelcase": 0,
-    "jsx-a11y/anchor-is-valid": 0,
-    "jsx-a11y/click-events-have-key-events": 0,
-    "jsx-a11y/interactive-supports-focus": 0,
-    "jsx-a11y/label-has-associated-control": 0,
-    "jsx-a11y/label-has-for": 0,
-    "jsx-a11y/no-noninteractive-element-interactions": 0,
+    "import/prefer-default-export": 0,
+    "jsx-a11y/label-has-associated-control": ["off"],
+    "jsx-a11y/label-has-for": ["off"],
     "no-case-declarations": 0,
-    "no-console": 0,
+    "no-console": ["error", { "allow": ["warn", "error"] }],
     "no-nested-ternary": 0,
-    "no-param-reassign": 0,
-    "no-undef": 0,
     "no-underscore-dangle": 0,
-    "no-use-before-define": 0,
-    "object-curly-newline": 0,
-    "react/destructuring-assignment": 0,
-    "react/jsx-closing-bracket-location": 0,
-    "react/jsx-filename-extension": 0,
-    "react/jsx-first-prop-new-line": 0,
-    "react/jsx-indent-props": 0,
-    "react/jsx-indent": 0,
-    "react/jsx-max-props-per-line": 0,
-    "react/jsx-one-expression-per-line": 0,
-    "react/no-array-index-key": 0,
-    "react/prefer-stateless-function": 0,
-    "react/prop-types": 0
+    "react/jsx-filename-extension": ["off"],
+    "react/jsx-indent": ["off"],
+    "react/jsx-one-expression-per-line": ["off"],
+    "react/jsx-props-no-spreading": ["off"],
+    "react/prop-types": ["off"]
   }
 }
