--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.8.6",
     "react-feather": "^2.0.3",
     "react-final-form": "^6.3.0",
+    "react-modal": "^3.10.1",
     "react-notifications": "^1.4.3",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
