--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/alexhans1/bdu-members-area/issues"
   },
-  "homepage": "https://github.com/alexhans1/bdu-members-area#readme"
+  "homepage": "https://github.com/alexhans1/bdu-members-area#readme",
+  "devDependencies": {
+    "prettier": "^1.19.1"
+  }
 }
