--- a/server/package.json
+++ b/server/package.json
@@ -51,7 +51,6 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.9.1",
-    "prettier": "^1.17.0"
+    "eslint-plugin-react": "^7.9.1"
   }
 }
