--- a/jobs/banking/package.json
+++ b/jobs/banking/package.json
@@ -15,7 +15,10 @@
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "request-promise": "^4.2.4",
+    "winston": "^3.2.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "dotenv": "^8.2.0"
+  }
 }
