--- a/jobs/emailService/package.json
+++ b/jobs/emailService/package.json
@@ -14,6 +14,7 @@
     "@sendgrid/mail": "^6.4.0",
     "bookshelf": "^0.15.1",
     "knex": "^0.19.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "winston": "^3.2.1"
   }
 }
